use Long.valueOf instead of new Long in TimestampType conversion
In order to make use of the internal long value cache.